--- a/.markbot.yml
+++ b/.markbot.yml
@@ -1,9 +1,14 @@
 repo: "responsive-typography"
-canvasCourse: "467502"
-canvasAssignment: "4178347"
+canvasCourse: "web-dev-1"
 
 naming: true
-commits: 2
+restrictFileTypes: true
+liveWebsite: true
+
+git:
+  numCommits: 2
+  allCommitted: true
+  allSynced: true
 
 html:
   - path: "index.html"
@@ -29,22 +34,22 @@ css:
       - ['article ol']
       - ['blockquote']
       - ['.quote']
+      - ['@38em', 'html', 'font-size', '110%']
+      - ['@38em', 'html', 'line-height', '1.4']
+      - ['@60em', 'html', 'font-size', '120%']
+      - ['@60em', 'html', 'line-height', '1.5']
+      - ['@90em', 'html', 'font-size', '130%']
     search:
       - '@-moz-viewport'
       - '@-ms-viewport'
       - '@-o-viewport'
       - '@-webkit-viewport'
       - '@viewport'
-      - '@media only screen and \(min-width: 38em\) \{'
-      - '@media only screen and \(min-width: 60em\) \{'
-      - '@media only screen and \(min-width: 90em\) \{'
       - '100%'
-      - '110%'
-      - '120%'
-      - '130%'
-      - '1\.3'
-      - '1\.4'
-      - '1\.5'
+      - '1.3'
+      - '#555'
+      - '#999'
+      - '#222'
       - 'Crimson Text'
     search_not:
       - ['@media.+\(.*max-width', 'Media queries with `max-width` should not be used — use `min-width` instead']
